k8s/task_29/pod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.3
          resources:
            limits:
              cpu: "1"
              memory: "150Mi"
            requests:
              cpu: "0.5"
              memory: "100Mi"
          ports:
            - containerPort: 80

          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
            - name: default-page
              mountPath: /usr/share/nginx/html/
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 30
            periodSeconds: 10
      volumes:
        - name: default-page
          configMap:
            name: my-config-html
        - name: nginx-config
          secret:
            secretName: nginx-config
