k8s/task_29/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  #annotations:
  #service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  #service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:032937477558:certificate/5d7cc376-a54e-475e-932f-9a780bda5b28"
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
